# rizz

./: .dockerignore  .gitignore  Anchor.toml  Contrib.md  Dockerfile  Justfile  README.md  app.py  bun.lockb  pyproject.toml  setup.cfg
programs/rizz/: Cargo.toml
programs/rizz/src/: lib.rs
programs/rizz/src/dot/: program.rs
programs_py/: rizz.py  room.py
scripts/: privKey.py
tests/: rizz.ts
