[tool.poetry]
name = "rizz"
version = "0.1.0"
description = "Females-Only Intimacy Platform"
authors = ["Nasfame <laciferin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
