[tool.poetry]
name = "rizz"
version = "0.1.0"
description = "Females-Only Intimacy Platform"
authors = ["Nasfame <laciferin@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://rizz.vercel.app"
repository = "https://rizz.vercel.app"
documentation = "https://rizz.vercel.app"
keywords = ["solana", "web3Bumble"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest-benchmark = "^4.0.0"
flake8-in-file-ignores = "^0.2.2"
pre-commit = "^3.4.0"
coverage = "^7.3.2"

classifiers = [
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3.x",
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Streamlit",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Your License Here",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: System :: Distributed Computing",
  "Topic :: System :: Networking",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://gitlab.com/rizz/rizz/issues"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
